[package]
name = "api"
version = "0.1.0"
authors = ["Bradley Shawyer <21098019+bradleyess@users.noreply.github.com>"]
edition = "2018"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "server"

[dependencies]
actix-web = "3.0.2"
actix-rt = "1.1.1"

[dev-dependencies]
reqwest = "0.10.8"
tokio = "0.2.22"
